# sobaka-sample

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: backend.yml  ci.yml  frontend.yml  infrastructure.yml
audio-cli/: Cargo.toml  README.md
audio-cli/src/: main.rs
audio-core/: .gitignore  Cargo.toml
audio-core/src/: envelope.rs  filter.rs  graph.rs  instrument.rs  lib.rs  sequencer.rs  synth.rs
audio-core/src/modules/: io.rs  mod.rs  traits.rs
audio-core/src/modules/clock/: mod.rs
audio-core/src/modules/delay/: mod.rs  node.rs
audio-core/src/modules/envelope/: envelope.rs  mod.rs  node.rs
audio-core/src/modules/oscillator/: mod.rs
audio-core/src/modules/parameter/: mod.rs  node.rs
audio-core/src/modules/sequencer/: mod.rs  node.rs
audio-core/src/modules/sink/: mod.rs
audio-core/src/modules/sum/: mod.rs
audio-core/src/modules/volume/: mod.rs
audio-core/src/node/: delay.rs  envelope.rs  input.rs  input_signal.rs  midi.rs  mod.rs  noise.rs  oscillator.rs  parameter.rs  quantiser.rs  reverb.rs  sample_and_hold.rs  sampler.rs  sequencer.rs  sink.rs  sum.rs  volume.rs
audio-core/src/node/filter/: filters.rs  mod.rs  node.rs
audio-core/src/util/: atomic_float.rs  filtered_signal.rs  input.rs  input_signal.rs  mod.rs  note.rs  state_observer.rs
audio-worklet/: .eslintrc.js  .gitignore  Cargo.toml  README.md  build-wasm.sh  build.sh  package-lock.json  package.json  tsconfig.json
audio-worklet/examples/: beep.rs  osc.rs  schema.rs
audio-worklet/lib/: abstractModule.ts  constants.ts  conversion.ts  generatedAudioNodes.ts  index.ts  interface.ts  module.ts  sobaka.node.ts  sobaka.worklet.ts
audio-worklet/lib/nodes/: delay.ts  envelope.ts  filter.ts  index.ts  input.ts  midi.ts  noise.ts  oscillator.ts  parameter.ts  quantiser.ts  reverb.ts  sample_and_hold.ts  sampler.ts  sequencer.ts  sink.ts  sum.ts  volume.ts
audio-worklet/scripts/: build-types.sh
audio-worklet/src/: context.rs  get_random.rs  graph.rs  index.ts  lib.rs  rpc.rs  subscriptions.rs  worklet.rs
audio-worklet/src/dsp/: envelope.rs  hold.rs  messaging.rs  mod.rs  onset.rs  oscillator.rs  param.rs  player.rs  pluck.rs  quantiser.rs  scope.rs  shared.rs  stepped.rs  trigger.rs
audio-worklet/src/graph_rpc/: api.rs  mod.rs
audio-worklet/src/interface/: address.rs  error.rs  message.rs  mod.rs
audio-worklet/src/main/: abstractModule.ts  conversion.ts  index.ts  interface.ts  module.ts  postMessageTransport.ts  sobaka.node.ts
audio-worklet/src/module/: clock.rs  delay.rs  envelope.rs  filter.rs  lfo.rs  mod.rs  noise.rs  oscillator.rs  parameter.rs  quantiser.rs  reverb.rs  sample_and_hold.rs  sampler.rs  scope.rs  sequencer.rs  step_sequencer.rs  string.rs  vca.rs
audio-worklet/src/modules/: mod.rs  module.rs
audio-worklet/src/rpc/: interface.rs  mod.rs
audio-worklet/src/utils/: atomic_float.rs  id_provider.rs  mod.rs  observer.rs  post_message_transport.rs
audio-worklet/src/worklet/: fundsp_worklet.rs  graph.rs  lib.rs  polyfill.js  sobaka.worklet.ts  worklet.rs
audio-worklet/src/worklet/dsp/: hold.rs  join.rs  messaging.rs  midi.rs  mod.rs  onset.rs  oscillator.rs  player.rs  scope.rs  shared.rs  stepped.rs
audio-worklet/src/worklet/interface/: address.rs  error.rs  mod.rs
audio-worklet/src/worklet/module/: clock.rs  delay.rs  envelope.rs  filter.rs  midi.rs  mod.rs  noise.rs  oscillator.rs  parameter.rs  quantiser.rs  reverb.rs  sample_and_hold.rs  sampler.rs  sequencer.rs  step_sequencer.rs  string.rs  vca.rs
audio-worklet/src/worklet/rpc/: interface.rs  mod.rs
audio-worklet/src/worklet/utils/: dependent_module.rs  get_random.rs  mod.rs  polyfill.js  post_message_transport.rs  wasm_executer.rs
backend/: Cargo.toml
backend/helia/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/infrastructure/: main.tf  variables.tf
backend/libp2p-bootstrap/: Cargo.toml  Dockerfile  README.md
backend/libp2p-bootstrap/infrastructure/: main.tf  variables.tf
backend/libp2p-bootstrap/src/: main.rs
backend/signaling/: .npmignore  package-lock.json  package.json  tsconfig.json  vitest-environment-dynalite-config.cjs  vitest-environment-dynalite-config.js
backend/src/: instrument.rs  lib.rs  processor.rs  sequencer.rs
backend/webrtc-relay/: .gitignore  Cargo.toml  Dockerfile  README.md
backend/webrtc-relay/infrastructure/: main.tf  records.tf  variables.tf
backend/webrtc-relay/src/: behaviour.rs  main.rs
frontend/: .eslintrc.js  .prettierrc.cjs  index.ts  notes.md  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  svelte.config.js  tsconfig.json  vite.config.js  webpack.config.js
frontend/infrastructure/: cdn.tf  deploy.tf  outputs.tf  records.tf  storage.tf  variables.tf
frontend/src/: App.svelte  app.html  audio.ts  hooks.ts  index.ts  key_bindings.ts  patch.ts  writable_module.ts
frontend/static/: example.json  index.html
frontend/types/: AudioWorkletGlobalScope.d.ts  AudioWorkletProcessor.d.ts  worklet-loader.d.ts
frontend/web-audio/: .eslintrc.js  .gitignore  Cargo.toml  README.md  index.ts  package-lock.json  package.json  tsconfig.json  webpack.partial.js
frontend/webAudio/: index.ts  interface.ts  noise.node.ts  noise.worklet.ts  sampler.node.ts  sampler.worklet.ts
infrastructure/: main.tf  output.tf  outputs.tf  sobaka-next.tfvars  sobaka-prod.tfvars  terraform.tfvars.json  variables.tf
sobaka-dsp/: Cargo.toml  package-lock.json  package.json  rust-toolchain.toml
sobaka-dsp/sobaka-worklet/: Cargo.toml
sobaka-dsp/sobaka-worklet/src/: fundsp_worklet.rs  lib.rs  media_manager.rs
sobaka-dsp/sobaka-worklet/src/dsp/: envelope.rs  hold.rs  mod.rs  onset.rs  oscillator.rs  player.rs  quantiser.rs  trigger.rs
sobaka-dsp/sobaka-worklet/src/module/: clock.rs  delay.rs  envelope.rs  filter.rs  mod.rs  noise.rs  oscillator.rs  quantiser.rs  reverb.rs  sample_and_hold.rs  sampler.rs  scope.rs  sequencer.rs  step_sequencer.rs
sobaka-dsp/sobaka-worklet/src/utils/: mod.rs
sobaka-dsp/sobaka-worklet/src/worker/: mod.rs  pool.rs
(+249 files in other folders)
