[package]
name = "sobaka-sample-audio-cli"
version = "0.1.0"
authors = ["Marcel Gleeson <gleeson.marcel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sobaka-sample-audio-core = { path = "../audio-core" }
cpal = "0.13.3"

