[package]
name = "sobaka-sample-audio-core"
version = "0.1.0"
authors = ["Marcel Gleeson <gleeson.marcel@gmail.com>"]
edition = "2018"

[dependencies]
dasp = { git = "https://github.com/Marcel-G/dasp", features = ["all"] }
petgraph = { version = "0.5", features = ["stable_graph"] }
impl-enum = "0.2.0"
async-std = { version = "1.10.0", features = ["unstable"] }
derive_more = "0.99"
freeverb = { git = "https://github.com/irh/freeverb-rs" }
strum = "0.23"
strum_macros = "0.23"
futures = "0.3.17"
serde = { version = "1.0", features = ["derive", "rc"] }
ts-rs = { version = "6.1.2", features = ["serde-compat"] }