[package]
name = "sobaka-sample-audio-worklet"
version = "0.1.0"
authors = ["Marcel Gleeson <gleeson.marcel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
all = ["default", "osc"]
default = ["console_error_panic_hook"]
osc = ["dep:rosc"]

[dependencies]
fundsp = "0.6.3"
petgraph = { version = "0.6", features = ["stable_graph"] }

# For OSC example
rosc = { version = "~0.7", optional = true }

# Todo check all the below
serde = { version = "1.0", features = ["derive", "rc"] }
derive_more = "0.99.0"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpc-core-client = "18.0" # Why do I need this?
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
async-std = { version = "1.10.0", features = ["unstable"] }
futures = "0.3.17"
linkme = "0.2.10"

# Wasm Dependencies
js-sys = "0.3.51"
web-sys = { version = "0.3.55", features = ["MessagePort", "console"] }
getrandom = { version = "0.2", features = ["custom"] }
ts-rs = { version = "6.1.2", features = ["serde-compat"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

# https://github.com/rustwasm/wasm-pack/issues/743#issuecomment-798881356
parking_lot_core = "=0.8.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
cpal = "0.13.5"
anyhow = "1.0.56"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true

# Macbook M1 - https://github.com/rustwasm/wasm-pack/issues/913#issuecomment-783482463
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[example]]
name = "osc"
path = "examples/osc.rs"
required-features = ["osc"]