[package]
name = "sobaka-sample-audio-worklet"
version = "0.1.0"
authors = ["Marcel Gleeson <gleeson.marcel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/worklet/lib.rs"

[features]
all = ["default"]
default = ["console_error_panic_hook"]

[dependencies]
fundsp = "0.6.3"
petgraph = { version = "0.6", features = ["stable_graph"] }
numeric-array = "0.5.2"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive", "rc"] }
derive_more = "0.99.0"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"

async-std = { version = "1.10.0", features = ["unstable"] }
futures = "0.3.17"

rustfft = { version = "6.0.1" }

# Wasm Dependencies
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.32" }
js-sys = "0.3.59"

getrandom = { version = "0.2", features = ["custom"] }
ts-rs = { version = "6.1.2", features = ["serde-compat"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

# @todo waiting for this feature to be released 
# https://github.com/rustwasm/wasm-bindgen/pull/3016
# Maybe this is needed to get the build to work:
# `cargo install -f wasm-bindgen-cli --git https://github.com/rustwasm/wasm-bindgen`
[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "bf109de9b2a46de0d8e7ffea198823e5a6744a1b" }

[dependencies.web-sys]
version = "0.3.59"
features = [
  "console",
  "MessagePort",
  "AudioContext",
  "AudioDestinationNode",
  "AudioWorklet",
  "AudioWorkletNode",
  "AudioWorkletNodeOptions",
  "Blob",
  "BlobPropertyBag",
  "Document",
  "HtmlInputElement",
  "HtmlLabelElement",
  "Url",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
anyhow = "1.0.56"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3

