[package]
name = "rust-libp2p-webrtc-peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.27"
futures-timer = "3.0.2"
libp2p = { version = "0.52.0", features = [
	"identify",
	"ping",
	"tokio",
	"gossipsub",
	"macros",
	"relay",
	"kad",
	"rsa",
	"ed25519",
] }
libp2p-webrtc = { version = "0.6.0-alpha",  features = [
	"tokio",
  "pem"
] }
libp2p-quic = { version = "0.8.0-alpha",  features = ["tokio"] }
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

[patch.crates-io]
multiaddr = { git = "https://github.com/Marcel-G/rust-multiaddr", branch = "webrtc" }
libp2p = { path = "../../../../random/rust-libp2p/libp2p" }
libp2p-quic = { path = "../../../../random/rust-libp2p/transports/quic" }
libp2p-webrtc = { path = "../../../../random/rust-libp2p/transports/webrtc" }
# libp2p = { git = "https://github.com/Marcel-G/rust-libp2p", branch = "deps/update-multiaddr" }