[package]
name = "sobaka-worklet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric-array = "0.5.2"
async-std = { version = "1.12.0" }
futures-channel = "0.3.26"

rustfft = { version = "6.0.1" }
fundsp = "0.6.3"

waw = { git = "https://github.com/Marcel-G/waw-rs", features = ["shared-memory"] }
wasm-bindgen = { version = "0.2.82" }
wasm-bindgen-futures = { version = "0.4.34" }

serde_bytes = "0.11"
bytemuck = "1.12.3"

js-sys = "0.3.59"

# @todo remove this dependency - https://gitlab.com/KonradBorowski/enum-map/-/issues/22
enum-map = "2.4.1"
tsify = { version = "0.4.3", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { version = "0.2", features = ["custom"] }

[dependencies.web-sys]
version = "0.3.59"
features = [
  'ErrorEvent',
  'Event',
  'Window',
  'Worker',
	'WorkerOptions',
	'WorkerType',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]


[dev-dependencies]
wasm-bindgen-test = "0.3.13"
anyhow = "1.0.56"

[build]
target = "wasm32-unknown-unknown"
rustflags = '-Ctarget-feature=+atomics,+bulk-memory'
